Prepare UI integration test infrastructure with in-memory Mongo